Query isatty directly to decide whether to show smart progress bars.